@@ -176,7 +176,7 @@ preferences_dialog::preferences_dialog(display& disp, const config& game_cfg)
 	  show_team_colours_button_(disp.video(), _("Show Team Colors"), gui::button::TYPE_CHECK),
 	  show_colour_cursors_button_(disp.video(), _("Show Color Cursors"), gui::button::TYPE_CHECK),
 	  show_haloing_button_(disp.video(), _("Show Haloing Effects"), gui::button::TYPE_CHECK),
-	  video_mode_button_(disp.video(), _("Video Mode")),
+	  video_mode_button_(disp.video(), _("Change Resolution")),
 	  theme_button_(disp.video(), _("Theme")),
 	  hotkeys_button_(disp.video(), _("Hotkeys")),
 	  gamma_button_(disp.video(), _("Adjust Gamma"), gui::button::TYPE_CHECK),
@@ -185,8 +185,8 @@ preferences_dialog::preferences_dialog(display& disp, const config& game_cfg)
 	  sound_button_(disp.video(), _("Sound effects"), gui::button::TYPE_CHECK),
 	  music_button_(disp.video(), _("Music"), gui::button::TYPE_CHECK),
 	  chat_timestamp_button_(disp.video(), _("Chat Timestamping"), gui::button::TYPE_CHECK),
-	  advanced_sound_button_(disp.video(), _("Advanced Mode")),
-	  normal_sound_button_(disp.video(), _("Normal Mode")),
+	  advanced_sound_button_(disp.video(), _("sound^Advanced Options")),
+	  normal_sound_button_(disp.video(), _("sound^Standard Options")),
 	  UI_sound_button_(disp.video(), _("User Interface Sounds"), gui::button::TYPE_CHECK),
 	  sample_rate_button1_(disp.video(), "22050", gui::button::TYPE_CHECK),
 	  sample_rate_button2_(disp.video(), "44100", gui::button::TYPE_CHECK),
