@@ -26,6 +26,9 @@ Version 1.3.9+svn:
      * created female variation for L3 Necromancer (needs graphics)
  * user interface:
    * changed the mute hotkey from ctrl-m to ctrl-alt-m
+   * renamed "Advanced Mode" button on graphics preferences to "Change Resolution"
+   * renamed "Advanced Mode" button on sound preferences to "Advanced Options", and
+     "Normal Mode" to "Standard Options"
  * WML engine:
    * new key "contains=" in [variable] conditions to check the presence of a 
      substring in a variable value
